## ====================================================================
## file:	Makefile.am
## contents:	automake template
## author:      stefan kersten <steve@k-hornz.de>
## CVS:         $Id$
## ====================================================================

MAINTAINERCLEANFILES	= Makefile.in

if WITH_SCLANG
LANG			= lang
else
LANG			=
endif

SUBDIRS			= common server plugins $(LANG)

## EOF ================================================================
