## ====================================================================
## file:	Makefile.am
## contents:	automake template
## author:      stefan kersten <steve@k-hornz.de>
## CVS:         $Id$
## ====================================================================

MAINTAINERCLEANFILES	= \
	Makefile.in \
	aclocal.m4 \
	config.cache \
	config.guess \
	config.h.in \
	config.h.in~ \
	config.sub \
	configure \
	elisp-comp \
	install-sh \
	ltmain.sh \
	missing	\
	mkinstalldirs \
	stamp-h.in \
	config.log \
	depcomp \
	stamp-h

SUBDIRS			= source headers build linux
EXTRA_DIST		= doc

## EOF ================================================================
